Fix (pdfwrite) : A stronger condition for skipping the initial fill with a white color.

DETAILS :

Bug 688641 "pdfwrite is_in_page is broken, leads to spurious transparency".

The old code skept any number initial fills with a white color.
The new code skips only if the filling box is entire page.
Also the condition about nested streams (sbstack_depth == 0) was wrong for ps2write.

EXPECTED DIFFERENCES :

FIG3.eps

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@6986 a1074d23-0009-0410-80fe-cf8c14f379e6